--- a/requirements.txt
+++ b/requirements.txt
@@ -119,6 +119,7 @@ greenlet==1.1.2
 grpcio==1.41.1
 gspread==3.0.1
 gspread-dataframe==3.0.8
+gunicorn==20.1.0
 gym==0.17.3
 h5py==3.1.0
 HeapDict==1.0.1
